--- a/ShoppingApp/Base.lproj/Main.storyboard
+++ b/ShoppingApp/Base.lproj/Main.storyboard
@@ -5,40 +5,86 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item 2-->
+        <!--Search-->
         <scene sceneID="t5W-hj-iBH">
             <objects>
-                <viewController id="9FP-qi-2Z8" sceneMemberID="viewController">
+                <viewController title="Search" id="9FP-qi-2Z8" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8Zv-7S-BkN">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="WHW-eT-uBc"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="up6-nB-jnh"/>
+                    <tabBarItem key="tabBarItem" systemItem="search" id="up6-nB-jnh"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gM7-UC-V6a" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1514" y="315"/>
+            <point key="canvasLocation" x="1514" y="390"/>
         </scene>
-        <!--Item 1-->
-        <scene sceneID="EgJ-hw-opN">
+        <!--Category-->
+        <scene sceneID="SsV-c0-3lb">
             <objects>
-                <viewController id="0NB-tF-33k" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="z48-oI-RK0">
+                <collectionViewController id="aZF-NL-Oxd" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="wXk-rw-gyZ">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="iSd-Vf-WRw"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item 1" id="ZGf-yK-DxJ"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="JeQ-0W-Vsu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="7a5-yR-lMY">
+                            <size key="itemSize" width="120" height="120"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="7EO-Fa-vZh">
+                                <rect key="frame" x="10" y="10" width="120" height="120"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="W3I-Zz-vpB">
+                                    <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ec8-Ah-J7G">
+                                            <rect key="frame" x="22.666666666666671" y="0.0" width="75" height="75"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="75" id="So3-Al-bSf"/>
+                                                <constraint firstAttribute="height" constant="75" id="ajp-hf-saL"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="11H-6l-GZf">
+                                            <rect key="frame" x="0.0" y="78" width="120" height="42"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="42" id="xpO-Gu-O6x"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="ec8-Ah-J7G" firstAttribute="top" secondItem="W3I-Zz-vpB" secondAttribute="top" id="1LF-tq-cJF"/>
+                                        <constraint firstAttribute="bottom" secondItem="11H-6l-GZf" secondAttribute="bottom" id="6UQ-Gs-44s"/>
+                                        <constraint firstItem="11H-6l-GZf" firstAttribute="leading" secondItem="W3I-Zz-vpB" secondAttribute="leading" id="SMF-eh-VwS"/>
+                                        <constraint firstAttribute="trailing" secondItem="11H-6l-GZf" secondAttribute="trailing" id="Tzh-cn-Pds"/>
+                                        <constraint firstItem="ec8-Ah-J7G" firstAttribute="centerX" secondItem="W3I-Zz-vpB" secondAttribute="centerX" id="oET-6A-ROD"/>
+                                    </constraints>
+                                </collectionViewCellContentView>
+                                <size key="customSize" width="120" height="120"/>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="aZF-NL-Oxd" id="Wlr-lC-tSd"/>
+                            <outlet property="delegate" destination="aZF-NL-Oxd" id="I5u-je-CWs"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" title="Category" id="dxT-47-OYA"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wYV-n9-MOi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1514" y="-292"/>
+            <point key="canvasLocation" x="2443.0769230769229" y="-289.33649289099526"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="HCj-iO-6cQ">
@@ -50,7 +96,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="0NB-tF-33k" kind="relationship" relationship="viewControllers" id="V7j-oQ-jfi"/>
+                        <segue destination="hGt-UT-ff5" kind="relationship" relationship="viewControllers" id="lRr-b7-Tzs"/>
                         <segue destination="9FP-qi-2Z8" kind="relationship" relationship="viewControllers" id="tPT-lw-8ql"/>
                     </connections>
                 </tabBarController>
@@ -58,8 +104,28 @@
             </objects>
             <point key="canvasLocation" x="608" y="12"/>
         </scene>
+        <!--Category-->
+        <scene sceneID="LjG-8R-ByH">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hGt-UT-ff5" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Category" image="homekit" catalog="system" id="U0Y-oB-xoF"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="DO5-GJ-ZF0">
+                        <rect key="frame" x="0.0" y="47" width="390" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="aZF-NL-Oxd" kind="relationship" relationship="rootViewController" id="Dsc-Gl-fO4"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HSd-AK-wAv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1513.8461538461538" y="-289.33649289099526"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="homekit" catalog="system" width="128" height="104"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
