--- a/ShoppingApp/Base.lproj/Main.storyboard
+++ b/ShoppingApp/Base.lproj/Main.storyboard
@@ -59,7 +59,7 @@
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="42" id="xpO-Gu-O6x"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -85,10 +85,89 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" title="Category" id="dxT-47-OYA"/>
+                    <connections>
+                        <segue destination="gpS-fk-3mf" kind="show" identifier="categoryToItemSeg" id="b5g-kh-f4c"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wYV-n9-MOi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2443.0769230769229" y="-289.33649289099526"/>
+        </scene>
+        <!--Items Table View Controller-->
+        <scene sceneID="de6-zu-EmO">
+            <objects>
+                <tableViewController id="gpS-fk-3mf" customClass="ItemsTableViewController" customModule="ShoppingApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="6M4-Ev-Hg5">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Cell" id="3XL-Rm-OoW">
+                                <rect key="frame" x="0.0" y="50" width="390" height="80"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3XL-Rm-OoW" id="SaD-ww-CMe">
+                                    <rect key="frame" x="0.0" y="0.0" width="359.66666666666669" height="80"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="doc.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="MuX-n2-G51">
+                                            <rect key="frame" x="20" y="5.3333333333333357" width="90" height="69.666666666666671"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="70" id="WlL-p2-j7e"/>
+                                                <constraint firstAttribute="width" constant="90" id="cwM-fX-cWz"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mFg-0o-rPt">
+                                            <rect key="frame" x="117.99999999999999" y="0.0" width="171.66666666666663" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="XIR-9B-oGK"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="caC-aO-7a1">
+                                            <rect key="frame" x="118" y="30" width="172" height="45"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="45" id="Phl-zg-qXJ"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5000" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b4V-Uk-wd1">
+                                            <rect key="frame" x="298" y="31.666666666666671" width="52.666666666666686" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="caC-aO-7a1" firstAttribute="leading" secondItem="MuX-n2-G51" secondAttribute="trailing" constant="8" id="3hh-n4-kbT"/>
+                                        <constraint firstItem="MuX-n2-G51" firstAttribute="leading" secondItem="SaD-ww-CMe" secondAttribute="leading" constant="20" id="4yN-Lb-rk2"/>
+                                        <constraint firstItem="mFg-0o-rPt" firstAttribute="leading" secondItem="MuX-n2-G51" secondAttribute="trailing" constant="8" id="DrW-RM-uqe"/>
+                                        <constraint firstItem="b4V-Uk-wd1" firstAttribute="leading" secondItem="caC-aO-7a1" secondAttribute="trailing" constant="8" id="FnY-cV-tfD"/>
+                                        <constraint firstAttribute="trailing" secondItem="mFg-0o-rPt" secondAttribute="trailing" constant="70" id="Gee-7H-aHx"/>
+                                        <constraint firstAttribute="bottom" secondItem="caC-aO-7a1" secondAttribute="bottom" constant="5" id="I87-FJ-Oth"/>
+                                        <constraint firstItem="mFg-0o-rPt" firstAttribute="top" secondItem="SaD-ww-CMe" secondAttribute="top" id="Ih3-xC-JS0"/>
+                                        <constraint firstItem="caC-aO-7a1" firstAttribute="width" secondItem="mFg-0o-rPt" secondAttribute="width" multiplier="1.00194" id="b32-Fe-bFV"/>
+                                        <constraint firstItem="b4V-Uk-wd1" firstAttribute="centerY" secondItem="SaD-ww-CMe" secondAttribute="centerY" id="kcL-2H-ozD"/>
+                                        <constraint firstItem="MuX-n2-G51" firstAttribute="centerY" secondItem="SaD-ww-CMe" secondAttribute="centerY" id="pdg-M8-F3Q"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="b4V-Uk-wd1" secondAttribute="trailing" constant="1" id="q9O-aB-Hbn"/>
+                                        <constraint firstItem="MuX-n2-G51" firstAttribute="centerY" secondItem="SaD-ww-CMe" secondAttribute="centerY" id="vvH-jv-DxR"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="gpS-fk-3mf" id="BBu-oE-pRs"/>
+                            <outlet property="delegate" destination="gpS-fk-3mf" id="dAp-4G-Q4c"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="1UR-cG-As8"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UhI-6w-rQ7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3493.8461538461538" y="-289.33649289099526"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="HCj-iO-6cQ">
@@ -129,6 +208,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="doc.fill" catalog="system" width="115" height="128"/>
         <image name="homekit" catalog="system" width="128" height="104"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
